@@ -1,3 +1,8 @@
+2001-10-12  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/stdlib.h (__p__environ, __p__wenviron): use
+	__STDC__ prototypes.
+	
 2001-09-19  Earnie Boyd  <earnie@SF.net>
 
 	* Makefile.in: Remove the /usr from the install target.
